@@ -359,6 +359,7 @@ struct ts {
 
 	struct notify		*notify;
 	char				*notify_program;
+	int					notify_wait;
 
 	unsigned int		input_buffer_time;
 	LIST				*input_buffer;
