@@ -77,7 +77,7 @@ static void LOG_func(const char *msg) {
 		LOG(msg);
 }
 
-static const char short_options[] = "i:d:N:Sl:L:F:I:1:RzM:T:W:O:o:t:rk:g:upwxyc:C:Y:Q:A:s:U:P:B:46eZ:Ef:a:X:vqH:G:2:KJ:D:jbhVn:m:";
+static const char short_options[] = "i:d:N:9Sl:L:F:I:1:RzM:T:W:O:o:t:rk:g:upwxyc:C:Y:Q:A:s:U:P:B:46eZ:Ef:a:X:vqH:G:2:KJ:D:jbhVn:m:";
 
 // Unused short options: 035789
 static const struct option long_options[] = {
@@ -88,6 +88,7 @@ static const struct option long_options[] = {
 	{ "syslog-port",		required_argument, NULL, 'L' },
 	{ "log-file",			required_argument, NULL, 'F' },
 	{ "notify-program",		required_argument, NULL, 'N' },
+	{ "notify-wait",		no_argument,       NULL, '9' },
 
 	{ "input",				required_argument, NULL, 'I' },
 	{ "input-source",		required_argument, NULL, '1' },
@@ -160,6 +161,8 @@ static void show_help(struct ts *ts) {
 	printf(" -i --ident <server>        | Format PROVIDER/CHANNEL. Default: empty\n");
 	printf(" -d --daemon <pidfile>      | Daemonize program and write pid file.\n");
 	printf(" -N --notify-program <prg>  | Execute <prg> to report events. Default: empty\n");
+	printf(" -9 --notify-wait           | Enable one by one notification delivery.\n");
+	printf("                            . Default: not set (async, deliver ASAP)\n");
 	printf("\n");
 	printf("Input options:\n");
 	printf(" -I --input <source>        | Where to read from. File or multicast address.\n");
@@ -314,7 +317,9 @@ static void parse_options(struct ts *ts, int argc, char **argv) {
 			case 'N': // --notify-program
 				ts->notify_program = optarg;
 				break;
-
+			case '9': // --notify-wait
+				ts->notify_wait = !ts->notify_wait;
+				break;
 			case 'S': // --syslog
 				ts->syslog_active = 1;
 				ts->syslog_remote = 0;
@@ -682,7 +687,7 @@ static void parse_options(struct ts *ts, int argc, char **argv) {
 	if (ts->ident)
 		ts_LOGf("Ident      : %s\n", ts->ident);
 	if (ts->notify_program)
-		ts_LOGf("Notify prg : %s\n", ts->notify_program);
+		ts_LOGf("Notify prg : %s (%s)\n", ts->notify_program, ts->notify_wait ? "sync" : "async");
 	if (ts->pidfile)
 		ts_LOGf("Daemonize  : %s pid file.\n", ts->pidfile);
 	if (ts->syslog_active) {
